--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^8.3.4",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/vscode": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "commitlint": "^8.3.5",
     "eslint": "^6.8.0",
     "glob": "^7.1.6",
     "husky": "^4.2.3",
