--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "lint-staged": "^10.0.8",
     "mocha": "^7.1.2",
     "prettier": "^2.0.5",
+    "ts-node": "^8.10.2",
     "typescript": "^3.8.3",
     "vscode-test": "^1.3.0"
   }
