--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
       "pre-commit": "lint-staged"
     }
   },
-  "icon": "./logo.png",
+  "icon": "logo.png",
   "keywords": [
     "workspaces"
   ],
