--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vsc-workspace-sidebar",
   "description": "Adds a sidebar to VSCode that lists Workspaces and lets you open them in the current window or a new window.",
   "displayName": "Workspace Sidebar",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "activationEvents": [
     "*"
   ],
@@ -141,6 +141,9 @@
     "test": "node ./out/test/runTest.js",
     "vscode:prepublish": "yarn run compile",
     "watch": "tsc -watch -p ./"
+  },
+  "dependencies": {
+    "vscode-ext-localisation": "^1.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.3.4",
