feat(sidebar): display path to ws file

--- a/package.json
+++ b/package.json
@@ -63,6 +63,12 @@
           "description": "%config.workspaceFolder.description%",
           "scope": "application",
           "type": "string"
+        },
+        "workspaceSidebar.showPath": {
+          "default": false,
+          "description": "%config.workspaceShowPath.description%",
+          "scope": "application",
+          "type": "boolean"
         }
       }
     },
