--- a/package.json
+++ b/package.json
@@ -150,6 +150,10 @@
     "watch": "tsc -watch -p ./"
   },
   "dependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/sinon": "^9.0.9",
+    "chai": "^4.2.0",
+    "sinon": "^9.2.2",
     "vscode-ext-localisation": "^1.0.1",
     "xstate": "^4.15.1"
   },
