--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^7.0.2",
+    "@types/mock-fs": "^4.13.0",
     "@types/node": "^13.11.0",
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
@@ -171,6 +172,7 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "mocha": "^7.1.2",
+    "mock-fs": "^4.13.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.8.3",
