--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,30 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"outDir": "out",
-		"lib": [
-			"dom",
-			"es6"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	},
-	"exclude": [
-		"node_modules",
-		".vscode-test"
-	]
+  "compilerOptions": {
+    "experimentalDecorators": false,
+    "forceConsistentCasingInFileNames": false,
+    "lib": ["es6", "dom"],
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "outDir": "test",
+    "rootDir": "src",
+    "sourceMap": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "target": "es6"
+  },
+  "exclude": [
+    ".cache", 
+    ".vscode-test", 
+    "/test",
+    "build",
+    "dist",
+    "node_modules",
+    "out",
+    "resources/js/**/*",
+  ],
+  "include": [
+    "src/**/*",
+  ]
 }
