chore: fix build for 1.2.2

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,20 @@
-.vscode/**
-.vscode-test/**
-out/test/**
-src/**
+.cache
 .gitignore
-vsc-extension-quickstart.md
-**/tsconfig.json
+.prettierrc.js
+.stylelintignore
+.stylelintrc
+.vscode-test/**
+.vscode/**
+*.code-workspace
 **/.eslintrc.json
+**/.vsix
 **/*.map
 **/*.ts
-Colours.json
+**/tsconfig.json
 Colours.css
+Colours.json
+commitlint.config.js
+out/test/**
+src/**
+test/**
+vsc-extension-quickstart.md
