--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vsc-workspace-sidebar",
   "description": "Adds a sidebar to VSCode that lists Workspaces and lets you open them in the current window or a new window.",
   "displayName": "Workspace Sidebar",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "activationEvents": [
     "*"
   ],
@@ -75,7 +75,8 @@
           "enumDescriptions": [
             "%config.workspaceShowPath.always%",
             "%config.workspaceShowPath.asneeded%",
-            "%config.workspaceShowPath.never%"],
+            "%config.workspaceShowPath.never%"
+          ],
           "scope": "application",
           "type": "string"
         },
