--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "@types/chai": "^4.2.14",
     "@types/sinon": "^9.0.9",
     "chai": "^4.2.0",
+    "crypto": "^1.0.1",
     "rimraf": "^3.0.2",
     "sinon": "^9.2.2",
     "vscode-ext-localisation": "^1.0.1"
