--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "experimentalDecorators": false,
     "forceConsistentCasingInFileNames": false,
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "es2019"],
     "module": "commonjs",
     "noImplicitAny": true,
     "noUnusedLocals": true,
