Revert "Updated folder-depth settings"
This reverts commit c2813016242bdb057aa40f07fda08f106a1586f0.

--- a/package.json
+++ b/package.json
@@ -65,9 +65,10 @@
           "type": "string"
         },
         "workspaceSidebar.depth": {
-          "default": -1,
+          "default": 0,
           "description": "%config.workspaceFolderDepth.description%",
-          "minimum": -1,
+          "maximum": 5,
+          "minimum": 0,
           "scope": "application",
           "type": "number"
         },
