--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "stylelint-config-recommended"
+  "extends": "stylelint-config-recommended",
+  "rules": {
+    "selector-type-no-unknown": [
+      true,
+      {
+        "ignoreTypes": ["vscode-text-field"]
+      }
+    ]
+  }
 }
