--- a/package.json
+++ b/package.json
@@ -263,6 +263,7 @@
     "chai": "^4.2.0",
     "commitlint": "^8.3.5",
     "eslint": "^6.8.0",
+    "eslint-plugin-mocha": "^10.1.0",
     "glob": "^7.1.6",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
