--- a/package.json
+++ b/package.json
@@ -261,7 +261,8 @@
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "crypto": "^1.0.1",
     "json5": "^2.2.3",
-    "vscode-ext-localisation": "^1.1.0"
+    "vscode-ext-localisation": "^1.1.0",
+    "vscode-file-theme-processor": "^1.0.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.3.4",
